movie 테이블 수정 movieDTO 추가 movieWriteOkAction 추가 adminDAO 수정

--- a/Jsp_project/src/com/cinema/controller/mapping.properties
+++ b/Jsp_project/src/com/cinema/controller/mapping.properties
@@ -1,9 +1,10 @@
 # admin action
 memberSearch.do = execute|com.admin.action.MemberSearchAction
+movieWriteOk.do = execute|com.admin.action.MovieWriteOkAction
 
 
-# admin view page
-
+#admin view page
+movieWrite.do = admin/movieWrite.jsp
 
 
 # user action
