movie, cinema, screen model 추가 screen(상영 설정)관련 class와 매핑 추가

--- a/Jsp_project/src/com/cinema/controller/mapping.properties
+++ b/Jsp_project/src/com/cinema/controller/mapping.properties
@@ -1,9 +1,10 @@
 # admin action
 memberSearch.do = execute|com.admin.action.MemberSearchAction
-
+screen_setting.do = execute|com.admin.action.ScreenSettingAction
+screen_insert.do = execute|com.admin.action.ScreenInsertAction
 
 # admin view page
-
+memberManagement.do = admin/memManagement.jsp
 
 
 # user action
