6/03 영화등록 폼 유효성 검사 추가 movie테이블 명 수정 member1테이블 명령문 추가

--- a/Jsp_project/src/com/cinema/controller/mapping.properties
+++ b/Jsp_project/src/com/cinema/controller/mapping.properties
@@ -1,12 +1,17 @@
 #admin action
+memberManagement.do = execute|com.admin.action.MemberListAction
 memberSearch.do = execute|com.admin.action.MemberSearchAction
 movieWriteOk.do = execute|com.admin.action.MovieWriteOkAction
 screen_setting.do = execute|com.admin.action.ScreenSettingAction
 screen_insert.do = execute|com.admin.action.ScreenInsertAction
+movieList.do = execute|com.admin.action.MovieListAction
+movieSearch.do = execute|com.admin.action.MovieSearchAction
+memApply.do = execute|com.admin.action.MemberApplyAction
+memDelete.do = execute|com.admin.action.MemberDeleteAction
 
 #admin view page
 movieWrite.do = admin/movieWrite.jsp
-memberManagement.do = admin/memManagement.jsp
+
 
 
 # user action
