1. 상영 정보 등록 시 시간대 유효성 체크 2. 상영 정보 등록 폼에서 영화명 선택 시 러닝타임 변경 3. 상영 지점 선택 시 상영관 정보 변경 4. 상영 정보 삭제 5. MovieDAO에 특정 영화 정보 오픈 메소드 추가 6. 상영 지점 출력 순서 변경(order by 삭제) cf. 상영 시간 계산식 추후 보완 필요함

--- a/Jsp_project/src/com/cinema/controller/mapping.properties
+++ b/Jsp_project/src/com/cinema/controller/mapping.properties
@@ -1,8 +1,9 @@
 #admin action
 memberSearch.do = execute|com.admin.action.MemberSearchAction
 movieWriteOk.do = execute|com.admin.action.MovieWriteOkAction
-screen_setting.do = execute|com.admin.action.ScreenSettingAction
-screen_insert.do = execute|com.admin.action.ScreenInsertAction
+movieScreenSetting.do = execute|com.admin.action.ScreenSettingAction
+movieScreenInsert.do = execute|com.admin.action.ScreenInsertAction
+movieScreenDelete.do = execute|com.admin.action.ScreenDeleteAction
 
 #admin view page
 movieWrite.do = admin/movieWrite.jsp
