영화 수정버튼 기능 구현 영화 삭제버튼 기능 구현 줄거리 글자수 제한 movieWrite.jsp 각 항목에 placeholder 추가 미리보기 기능 구현!! 회원, 영화리스트 페이징처리 테이블 부트스트랩 스타일 추가 권한변경 ui변경 고민해봐야함

--- a/Jsp_project/src/com/cinema/controller/mapping.properties
+++ b/Jsp_project/src/com/cinema/controller/mapping.properties
@@ -11,7 +11,9 @@ memDelete.do = execute|com.admin.action.MemberDeleteAction
 movieScreenSetting.do = execute|com.admin.action.ScreenSettingAction
 movieScreenInsert.do = execute|com.admin.action.ScreenInsertAction
 movieScreenDelete.do = execute|com.admin.action.ScreenDeleteAction
-
+movieEdit.do = execute|com.admin.action.MovieEditAction
+movieEditOk.do = execute|com.admin.action.MovieEditOkAction
+movieDelete.do = execute|com.admin.action.MovieDeleteAction
 
 #admin view page
 movieWrite.do = admin/movieWrite.jsp
