1. 추가폼에 러닝타임 기준으로 상영 종료 시간 자동 셋팅 2. 수정 기능 추가 2-1. 수정 버튼 클릭 시 확인, 취소 버튼/수정 할 시간 timepicker 토글 2-2. 수정 취소 시 다시 수정 버튼 토글 2-3. 수정 확인 시 유효성 체크(동일한 상영코드일 경우 바로 수정) 3. timepicker관련 javascript 대거 변경

--- a/Jsp_project/src/com/cinema/controller/mapping.properties
+++ b/Jsp_project/src/com/cinema/controller/mapping.properties
@@ -11,7 +11,7 @@ memDelete.do = execute|com.admin.action.MemberDeleteAction
 movieScreenSetting.do = execute|com.admin.action.ScreenSettingAction
 movieScreenInsert.do = execute|com.admin.action.ScreenInsertAction
 movieScreenDelete.do = execute|com.admin.action.ScreenDeleteAction
-
+movieScreenUpdate.do = execute|com.admin.action.ScreenUpdateAction
 
 #admin view page
 movieWrite.do = admin/movieWrite.jsp
