회원가입 완료(유효성 체크 수정필요)

--- a/Jsp_project/src/com/cinema/controller/mapping.properties
+++ b/Jsp_project/src/com/cinema/controller/mapping.properties
@@ -2,8 +2,6 @@
 memberManagement.do = execute|com.admin.action.MemberListAction
 memberSearch.do = execute|com.admin.action.MemberSearchAction
 movieWriteOk.do = execute|com.admin.action.MovieWriteOkAction
-screen_setting.do = execute|com.admin.action.ScreenSettingAction
-screen_insert.do = execute|com.admin.action.ScreenInsertAction
 movieList.do = execute|com.admin.action.MovieListAction
 movieSearch.do = execute|com.admin.action.MovieSearchAction
 memApply.do = execute|com.admin.action.MemberApplyAction
@@ -23,7 +21,11 @@ movieWrite.do = admin/movieWrite.jsp
 
 
 # user action
-
+memberJoin_ok.do = execute|com.cinema.action.MemberJoinOkAction
 
 
 # user view page
+memberJoinReady.do = view/memJoinReady.jsp
+memberJoin.do = view/memJoin.jsp
+MemberLogin.do = view/memLogin.jsp
+main.do = main.jsp
