메인 페이지, 영화차트 페이지 생성 현재 상영작, 상영 예정작 버튼 구현 내일 영화 상세정보 페이지 만들어야함.

--- a/Jsp_project/src/com/cinema/controller/mapping.properties
+++ b/Jsp_project/src/com/cinema/controller/mapping.properties
@@ -16,14 +16,16 @@ movieEditOk.do = execute|com.admin.action.MovieEditOkAction
 movieDelete.do = execute|com.admin.action.MovieDeleteAction
 movieScreenUpdate.do = execute|com.admin.action.ScreenUpdateAction
 
-
 #admin view page
 movieWrite.do = admin/movieWrite.jsp
 
 
 
 # user action
-
+mainList.do = execute|com.member.action.MainListAction
+movieChart.do = execute|com.member.action.MovieChartAction
+comingsoonChart.do = execute|com.member.action.ComMovieChartAction
+movieContent.do = execute|com.member.action.MovieContentAction
 
 
 # user view page
