1.회원가입 로직 수정(아이디, 연락처 Ajax로 체크) 2.로그인, 로그아웃 구현 완료 3.로그인 시 멤버세션 생성 3.아이디, 비밀번호 찾기 구현 완료

--- a/Jsp_project/src/com/cinema/controller/mapping.properties
+++ b/Jsp_project/src/com/cinema/controller/mapping.properties
@@ -2,8 +2,6 @@
 memberManagement.do = execute|com.admin.action.MemberListAction
 memberSearch.do = execute|com.admin.action.MemberSearchAction
 movieWriteOk.do = execute|com.admin.action.MovieWriteOkAction
-screen_setting.do = execute|com.admin.action.ScreenSettingAction
-screen_insert.do = execute|com.admin.action.ScreenInsertAction
 movieList.do = execute|com.admin.action.MovieListAction
 movieSearch.do = execute|com.admin.action.MovieSearchAction
 memApply.do = execute|com.admin.action.MemberApplyAction
@@ -26,6 +24,20 @@ mainList.do = execute|com.member.action.MainListAction
 movieChart.do = execute|com.member.action.MovieChartAction
 comingsoonChart.do = execute|com.member.action.ComMovieChartAction
 movieContent.do = execute|com.member.action.MovieContentAction
-
+memberJoinOk.do = execute|com.member.action.MemberJoinOkAction
+memberLogin.do = execute|com.member.action.MemberLoginAction
+memberLogout.do = execute|com.member.action.MemberLogoutAction
+memFindIdOk.do = execute|com.member.action.MemberFindIdOkAction
+memFindPwdOk.do = execute|com.member.action.MemberFindPwdOkAction
+memPhoneCheck.do = execute|com.member.action.MemberPhoneChkAction
+memIdCheck.do = execute|com.member.action.MemberIdChkAction
 
 # user view page
+memberJoinReady.do = view/memJoinReady.jsp
+memberJoin.do = view/memJoin.jsp
+memJoinComplete.do = view/memJoinComplete.jsp
+memberFindId.do = view/memFindId.jsp
+memberFindPwd.do = view/memFindPwd.jsp
+memberFindIdRes.do = view/memFindIdRes.jsp
+memberFindPwdRes.do = view/memFindPwdRes.jsp
+main.do = start.jsp
