내일 상영시간표 마무리 해야함.

--- a/Jsp_project/src/com/cinema/controller/mapping.properties
+++ b/Jsp_project/src/com/cinema/controller/mapping.properties
@@ -21,10 +21,12 @@ movieWrite.do = admin/movieWrite.jsp
 
 # user action
 mainList.do = execute|com.member.action.MainListAction
-movieChart.do = execute|com.member.action.MovieChartAction
+movieChart.do = execute|com.cinema.action.MovieChartAction
 comingsoonChart.do = execute|com.member.action.ComMovieChartAction
-movieContent.do = execute|com.member.action.MovieContentAction
+movieContent.do = execute|com.cinema.action.MovieContentAction
 memberJoin_ok.do = execute|com.cinema.action.MemberJoinOkAction
+reviewWriteOk.do = execute|com.member.action.ReviewWriteOkAction
+timeTable.do = execute|com.member.action.TimeTableAction
 
 # user view page
 memberJoinReady.do = view/memJoinReady.jsp
