1.login.jsp jQuery import 삭제(ScreenSetting.jsp와 충돌있음) 2.생년월일 input 방식 수정/ 유효성 체크 Ajax 로직 추가 3.로그아웃 confirm 로직 추가 4.상영 정보 추가/수정 로직 Ajax로 수정 5.상영 정보 목록 페이징 기능 추가

--- a/Jsp_project/src/com/cinema/controller/mapping.properties
+++ b/Jsp_project/src/com/cinema/controller/mapping.properties
@@ -40,7 +40,7 @@ memIdCheck.do = execute|com.member.action.MemberIdChkAction
 memberJoinReady.do = view/memJoinReady.jsp
 memberJoin.do = view/memJoin.jsp
 MemberLogin.do = view/memLogin.jsp
-main.do = main.jsp
+main.do = start.jsp
 memJoinComplete.do = view/memJoinComplete.jsp
 memberFindId.do = view/memFindId.jsp
 memberFindPwd.do = view/memFindPwd.jsp
