상영 정보 검색 기능 완료

--- a/Jsp_project/src/com/cinema/controller/mapping.properties
+++ b/Jsp_project/src/com/cinema/controller/mapping.properties
@@ -13,11 +13,10 @@ movieEdit.do = execute|com.admin.action.MovieEditAction
 movieEditOk.do = execute|com.admin.action.MovieEditOkAction
 movieDelete.do = execute|com.admin.action.MovieDeleteAction
 movieScreenUpdate.do = execute|com.admin.action.ScreenUpdateAction
+movieScreenSearch.do = execute|com.admin.action.ScreenSearchAction
 
 #admin view page
 movieWrite.do = admin/movieWrite.jsp
-
-
 
 # user action
 mainList.do = execute|com.member.action.MainListAction
