빠른 예매 구현 중(LocalDAO localOpenAsc() 추가, ScreenDAO  screenOpen() 추가, mheader 빠른 예매 화면 연결, 빠른예매 jsp, Action 생성)

--- a/Jsp_project/src/com/cinema/controller/mapping.properties
+++ b/Jsp_project/src/com/cinema/controller/mapping.properties
@@ -34,16 +34,19 @@ memFindIdOk.do = execute|com.member.action.MemberFindIdOkAction
 memFindPwdOk.do = execute|com.member.action.MemberFindPwdOkAction
 memPhoneCheck.do = execute|com.member.action.MemberPhoneChkAction
 memIdCheck.do = execute|com.member.action.MemberIdChkAction
+movieQuickBooking.do = execute|com.cinema.action.movieQBookingAction
 
 # user view page
 memberJoinReady.do = view/memJoinReady.jsp
 memberJoin.do = view/memJoin.jsp
-MemberLogin.do = view/memLogin.jsp
 main.do = start.jsp
 memJoinComplete.do = view/memJoinComplete.jsp
 memberFindId.do = view/memFindId.jsp
 memberFindPwd.do = view/memFindPwd.jsp
 memberFindIdRes.do = view/memFindIdRes.jsp
 memberFindPwdRes.do = view/memFindPwdRes.jsp
+movieQuickBookingList.do = view/movieQuickBooking.jsp
+
+
 
 
