--- a/Jsp_project/src/com/cinema/controller/mapping.properties
+++ b/Jsp_project/src/com/cinema/controller/mapping.properties
@@ -15,11 +15,17 @@ movieEdit.do = execute|com.admin.action.MovieEditAction
 movieEditOk.do = execute|com.admin.action.MovieEditOkAction
 movieDelete.do = execute|com.admin.action.MovieDeleteAction
 movieScreenUpdate.do = execute|com.admin.action.ScreenUpdateAction
+cinemaWrite.do = execute|com.admin.action.CinemaWriteAction
+cinemaWriteOk.do = execute|com.admin.action.CinemaWriteOkAction
+cinemaList.do = execute|com.admin.action.CinemaListAction
+cinemaSearch.do = execute|com.admin.action.CinemaSearchAction
+cinemaEdit.do = execute|com.admin.action.CinemaEditAction
+cinemaEditOk.do = execute|com.admin.action.CinemaEditOkAction
+cinemaDelete.do = execute|com.admin.action.CinemaDeleteAction
 
 
 #admin view page
 movieWrite.do = admin/movieWrite.jsp
-
 
 
 # user action
