1.빠른 예매 관련 메서드 추가 2.빠른 예매 상단 날짜 스피너 추가 3.Ajax JSON 데이터 처리를 위한 라이브러리 추가   > MovieQBookingAction.java, movieQuickBooking.jsp의 98라인 dayBaseScreenOpen()을 참고하면 List 형태의 데이터도 Ajax로 받을 수 있습니다. 참고하시기 바랍니다.

--- a/Jsp_project/src/com/cinema/controller/mapping.properties
+++ b/Jsp_project/src/com/cinema/controller/mapping.properties
@@ -34,7 +34,8 @@ memFindIdOk.do = execute|com.member.action.MemberFindIdOkAction
 memFindPwdOk.do = execute|com.member.action.MemberFindPwdOkAction
 memPhoneCheck.do = execute|com.member.action.MemberPhoneChkAction
 memIdCheck.do = execute|com.member.action.MemberIdChkAction
-movieQuickBooking.do = execute|com.cinema.action.movieQBookingAction
+movieQuickBooking.do = execute|com.cinema.action.MovieQBookingAction
+screenListOpen.do = execute|com.cinema.action.ScreenListOpenAction
 
 # user view page
 memberJoinReady.do = view/memJoinReady.jsp
