지금 시간 이후의 영화만 보여주기 구현해야함 요일보기에서 앞뒤 버튼 기능 구현.... 버튼계속 눌러보면서 안되는 부분 확인하기

--- a/Jsp_project/src/com/cinema/controller/mapping.properties
+++ b/Jsp_project/src/com/cinema/controller/mapping.properties
@@ -44,7 +44,8 @@ memPhoneCheck.do = execute|com.member.action.MemberPhoneChkAction
 memIdCheck.do = execute|com.member.action.MemberIdChkAction
 movieQuickBooking.do = execute|com.cinema.action.MovieQBookingAction
 screenListOpen.do = execute|com.cinema.action.ScreenListOpenAction
-
+movieList2.do = execute|com.cinema.action.MovieList2Action
+cinematable.do = execute|com.cinema.action.CinemaTableAction
 # user view page
 memberJoinReady.do = view/memJoinReady.jsp
 memberJoin.do = view/memJoin.jsp
@@ -55,7 +56,6 @@ memberFindPwd.do = view/memFindPwd.jsp
 memberFindIdRes.do = view/memFindIdRes.jsp
 memberFindPwdRes.do = view/memFindPwdRes.jsp
 movieQuickBookingList.do = view/movieQuickBooking.jsp
-
 
 
 
