내일 리뷰란 만들기

--- a/Jsp_project/src/com/cinema/controller/mapping.properties
+++ b/Jsp_project/src/com/cinema/controller/mapping.properties
@@ -34,7 +34,6 @@ movieContent.do = execute|com.cinema.action.MovieContentAction
 memberJoin_ok.do = execute|com.cinema.action.MemberJoinOkAction
 reviewWriteOk.do = execute|com.member.action.ReviewWriteOkAction
 timeTable.do = execute|com.member.action.TimeTableAction
-movieContent.do = execute|com.member.action.MovieContentAction
 memberJoinOk.do = execute|com.member.action.MemberJoinOkAction
 memberLogin.do = execute|com.member.action.MemberLoginAction
 memberLogout.do = execute|com.member.action.MemberLogoutAction
@@ -46,6 +45,7 @@ movieQuickBooking.do = execute|com.cinema.action.MovieQBookingAction
 screenListOpen.do = execute|com.cinema.action.ScreenListOpenAction
 movieList2.do = execute|com.cinema.action.MovieList2Action
 cinematable.do = execute|com.cinema.action.CinemaTableAction
+ReviewList.do = execute|com.member.action.ReviewListAction
 # user view page
 memberJoinReady.do = view/memJoinReady.jsp
 memberJoin.do = view/memJoin.jsp
