예매 화면 디자인 완성 , 좌석 정보부터 해야함

--- a/Jsp_project/src/com/cinema/controller/mapping.properties
+++ b/Jsp_project/src/com/cinema/controller/mapping.properties
@@ -46,6 +46,9 @@ screenListOpen.do = execute|com.cinema.action.ScreenListOpenAction
 movieList2.do = execute|com.cinema.action.MovieList2Action
 cinematable.do = execute|com.cinema.action.CinemaTableAction
 ReviewList.do = execute|com.member.action.ReviewListAction
+movieBookingReady.do = execute|com.cinema.action.MovieBookingReadyAction
+
+
 # user view page
 memberJoinReady.do = view/memJoinReady.jsp
 memberJoin.do = view/memJoin.jsp
@@ -56,6 +59,7 @@ memberFindPwd.do = view/memFindPwd.jsp
 memberFindIdRes.do = view/memFindIdRes.jsp
 memberFindPwdRes.do = view/memFindPwdRes.jsp
 movieQuickBookingList.do = view/movieQuickBooking.jsp
+movieBookingSelect.do = view/movieBookingSelect.jsp
 
 
 
