--- a/Jsp_project/src/com/cinema/controller/mapping.properties
+++ b/Jsp_project/src/com/cinema/controller/mapping.properties
@@ -46,6 +46,9 @@ screenListOpen.do = execute|com.cinema.action.ScreenListOpenAction
 movieList2.do = execute|com.cinema.action.MovieList2Action
 cinematable.do = execute|com.cinema.action.CinemaTableAction
 ReviewList.do = execute|com.member.action.ReviewListAction
+ReviewIdCheck.do = execute|com.member.action.ReviewIdCheckAction
+TableScreenList.do = execute|com.cinema.action.TableScreenListAction
+TableScreenList1.do = execute|com.cinema.action.TableScreenList1Action
 # user view page
 memberJoinReady.do = view/memJoinReady.jsp
 memberJoin.do = view/memJoin.jsp
