1.결제 이동 시 유효성 체크 추가 2.결제 이동 메서드 추가 예매 화면에서 예매된 좌석 비활성화 / 남은좌석 표시 해야함..

--- a/Jsp_project/src/com/cinema/controller/mapping.properties
+++ b/Jsp_project/src/com/cinema/controller/mapping.properties
@@ -50,6 +50,7 @@ ReviewIdCheck.do = execute|com.member.action.ReviewIdCheckAction
 TableScreenList.do = execute|com.cinema.action.TableScreenListAction
 TableScreenList1.do = execute|com.cinema.action.TableScreenList1Action
 movieBookingReady.do = execute|com.cinema.action.MovieBookingReadyAction
+movieBookingPayment.do = execute|com.cinema.action.MovieBookingPaymentAction
 
 # user view page
 memberJoinReady.do = view/memJoinReady.jsp
