1. 예매테이블 구조 변경 시작, 종료시간(int->string), 컬럼 다수 데이터 길이 변경 2. 예매테이블 결제 방법 컬럼 추가 3. 스크린DTO 로컬코드 int형으로 변경 4. 로그인 관련 자바스크립트 js/loginout.js로 따로 뺐습니다. 5. 로그인 시 예매중이었다면 메인 말고 예매 화면으로 넘어감 6. 결제 화면으로 넘어갈 때 비로그인 상태면 로그인 창 띄우도록 구현 7. 예매하기 기능까지 완료.    > 예매 완료한 화면과 결제 화면 꾸며야함...

--- a/Jsp_project/src/com/cinema/controller/mapping.properties
+++ b/Jsp_project/src/com/cinema/controller/mapping.properties
@@ -53,6 +53,7 @@ movieBookingReady.do = execute|com.cinema.action.MovieBookingReadyAction
 movieBookingPayment.do = execute|com.cinema.action.MovieBookingPaymentAction
 myPageMain.do = execute|com.member.action.MyPageAction
 myPageBooked.do = execute|com.member.action.MyPageBookedAction
+movieBookingSend.do = execute|com.cinema.action.MovieBookingSendAction
 
 # user view page
 memberJoinReady.do = view/memJoinReady.jsp
@@ -65,6 +66,8 @@ memberFindIdRes.do = view/memFindIdRes.jsp
 memberFindPwdRes.do = view/memFindPwdRes.jsp
 movieQuickBookingList.do = view/movieQuickBooking.jsp
 movieBookingSelect.do = view/movieBookingSelect.jsp
+movieBookingPaymentOk.do = view/movieBookingSend.jsp
+movieBookingComplete.do = view/movieBookingComplete.jsp
 
 
 
