--- a/Jsp_project/src/com/cinema/controller/mapping.properties
+++ b/Jsp_project/src/com/cinema/controller/mapping.properties
@@ -53,6 +53,8 @@ movieBookingReady.do = execute|com.cinema.action.MovieBookingReadyAction
 movieBookingPayment.do = execute|com.cinema.action.MovieBookingPaymentAction
 myPageMain.do = execute|com.member.action.MyPageAction
 myPageBooked.do = execute|com.member.action.MyPageBookedAction
+myPageEdit.do = execute|com.member.action.MyPageEditAction
+
 
 # user view page
 memberJoinReady.do = view/memJoinReady.jsp
