--- a/Jsp_project/src/com/cinema/controller/mapping.properties
+++ b/Jsp_project/src/com/cinema/controller/mapping.properties
@@ -55,6 +55,7 @@ myPageMain.do = execute|com.member.action.MyPageAction
 myPageBooked.do = execute|com.member.action.MyPageBookedAction
 movieBookingSend.do = execute|com.cinema.action.MovieBookingSendAction
 myPageEdit.do = execute|com.member.action.MyPageEditAction
+movieBookingCancel.do = execute|com.cinema.action.MovieBookingCancelAction
 
 
 # user view page
