--- a/Jsp_project/src/com/cinema/controller/mapping.properties
+++ b/Jsp_project/src/com/cinema/controller/mapping.properties
@@ -22,7 +22,6 @@ cinemaEdit.do = execute|com.admin.action.CinemaEditAction
 cinemaEditOk.do = execute|com.admin.action.CinemaEditOkAction
 cinemaDelete.do = execute|com.admin.action.CinemaDeleteAction
 
-
 #admin view page
 movieWrite.do = admin/movieWrite.jsp
 
@@ -55,6 +54,9 @@ myPageMain.do = execute|com.member.action.MyPageAction
 myPageBooked.do = execute|com.member.action.MyPageBookedAction
 movieBookingSend.do = execute|com.cinema.action.MovieBookingSendAction
 myPageEdit.do = execute|com.member.action.MyPageEditAction
+myPageEditOk.do = execute|com.member.action.MyPageEditOkAction
+bootedDelete.do = execute|com.member.action.BootedDeleteAction
+memberDelete.do = execute|com.member.action.MemberDeleteAction
 
 
 # user view page
