리뷰 삭제 수정 기능 추가 배경이미지 그냥 기존 포스터로 추가 영화 검색기능 추가

--- a/Jsp_project/src/com/cinema/controller/mapping.properties
+++ b/Jsp_project/src/com/cinema/controller/mapping.properties
@@ -55,8 +55,9 @@ myPageMain.do = execute|com.member.action.MyPageAction
 myPageBooked.do = execute|com.member.action.MyPageBookedAction
 movieBookingSend.do = execute|com.cinema.action.MovieBookingSendAction
 myPageEdit.do = execute|com.member.action.MyPageEditAction
-
-
+reviewDelete.do = execute|com.member.action.ReviewDeleteAction
+reviewUpdateOk.do = execute|com.member.action.ReviewUpdateOkAction
+movieSearch2.do = execute|com.cinema.action.MovieSearch2Action
 # user view page
 memberJoinReady.do = view/memJoinReady.jsp
 memberJoin.do = view/memJoin.jsp
