--- a/Jsp_project/src/com/cinema/controller/mapping.properties
+++ b/Jsp_project/src/com/cinema/controller/mapping.properties
@@ -57,6 +57,7 @@ myPageEdit.do = execute|com.member.action.MyPageEditAction
 myPageEditOk.do = execute|com.member.action.MyPageEditOkAction
 bootedDelete.do = execute|com.member.action.BootedDeleteAction
 memberDelete.do = execute|com.member.action.MemberDeleteAction
+memPwdChk.do = execute|com.member.action.MemPwdChkAction
 
 
 # user view page
